--- a/App/KhabenNakiUser/app/src/main/res/values/colors.xml
+++ b/App/KhabenNakiUser/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- basic colors -->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -7,4 +9,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <!-- basic colors -->
+
+    <!-- main colors -->
+    <color name="main_color">#F15B5D</color>
+    <color name="background_color">#FFFFFFFF</color>
+    <color name="ripple_color">#D8D8D4</color>
+    <!-- main colors -->
+
+    <!-- grey colors -->
+    <color name="grey_light_2">#BDBDBD</color>
+
 </resources>
